fix: arrow alignment fixes

--- a/packages/common/styles/globals.scss
+++ b/packages/common/styles/globals.scss
@@ -387,6 +387,25 @@ td {
   border: 0.8px dashed rgba(139, 139, 139, 0.70) !important;
   background: #24272E !important;
 }
+:where(.css-dev-only-do-not-override-149avxh).ant-select .ant-select-arrow {
+  margin-top: 8px !important;
+}
+
+// :where(.css-dev-only-do-not-override-149avxh).ant-select-single:not(.ant-select-customize-input) .custom-select .ant-select-selector {
+//   width: 469px !important;
+//   height: 69px !important;
+//   border-radius: 10px !important;
+//   border: 0.8px dashed rgba(139, 139, 139, 0.70) !important;
+//   background: #1A2A42 !important;
+// }
+
+// .custom-select .ant-select-selector {
+//   width: 469px !important;
+//   height: 69px !important;
+//   border-radius: 10px !important;
+//   border: 0.8px dashed rgba(139, 139, 139, 0.70) !important;
+//   background: #1A2A42 !important;
+// }
 
 .custom-select-bg {
   background-color: #1A2A42;
